# archon-vibe

./: .dockerignore  .env.example  .fastembed_cache  .gitattributes  .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CONTEXT7.md  DISCORD.md  DOCKER.md  PRODUCT.md  README.md  SYNC.md  TESTING.md  TOURNAMENTS.md  VEKN_SYNC.md  development-plan.md  docker-compose.yml  justfile  pyproject.toml
.claude/agent-memory/documentalist/: MEMORY.md
.claude/agent-memory/i18n-translator/: MEMORY.md
.claude/agent-memory/principal-engineer/: MEMORY.md  architecture-review.md  i18n-plan.md  sse-performance.md
.claude/agent-memory/product-manager/: MEMORY.md  leagues-design.md
.claude/agent-memory/senior-qa/: MEMORY.md
.claude/agent-memory/staff-frontend-engineer/: MEMORY.md
.claude/agents/: documentalist.md  i18n-translator.md  principal-engineer.md  product-manager.md  senior-qa.md  staff-frontend-engineer.md
.cursor/rules/: architecture.mdc  base.mdc
.github/workflows/: update-cards.yml
INCOMING/: thearchon1.5l.xlsx
backend/: Dockerfile
backend/scripts/: README.md  audit_cities.py  backfill_objects.py  build_geonames.py  populate_test_db.py
backend/src/: __init__.py  access_levels.py  archon_import.py  broadcast.py  db.py  db_oauth.py  email_service.py  geonames.py  jwt_config.py  main.py  models.py  providers.py  ratings.py  snapshots.py  twda.py  twda_import.py  utils.py  vekn_api.py  vekn_push.py  vekn_sync.py  vekn_tournament_sync.py
backend/src/data/: __init__.py
backend/src/data/geonames/: __init__.py  countries.json
backend/src/middleware/: auth.py
backend/src/routes/: admin.py  api_v1.py  auth.py  calendar.py  cards.py  leagues.py  oauth.py  sanctions.py  tournaments.py  users.py  vekn.py
backend/src/routes/auth/: __init__.py  _tokens.py  discord.py  email_password.py  magic_link.py  passkeys.py  profile.py
backend/tests/: conftest.py  mock_vekn_data.py  test_access_levels.py  test_calendar.py  test_offline_mode.py  test_organizer_access.py  test_profile_update.py  test_ratings.py  test_sse_filters.py  test_timer_and_judge_call.py  test_users.py  test_vekn_push.py
engine/: .gitignore  Cargo.toml  README.md  TOURNAMENT.md  archon_engine.pyi  compare_seating.py  pyproject.toml
engine/.claude/agent-memory/principal-engineer/: MEMORY.md
engine/src/: cards.rs  deck.rs  league.rs  lib.rs  permissions.rs  ratings.rs  seating.rs  tournament.rs
engine/src/tournament/: helpers.rs  mod.rs  parsing.rs  raffle.rs  sanctions.rs  scoring.rs  standings.rs  tests.rs  types.rs
frontend/: .gitignore  DESIGN.md  Dockerfile  Dockerfile.test  README-GEONAMES.md  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  svelte.config.js  test-geonames.html  tsconfig.json  vite.config.ts
frontend/.claude/agent-memory/i18n-translator/: MEMORY.md
frontend/.claude/agent-memory/staff-frontend-engineer/: MEMORY.md
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
frontend/.svelte-kit/output/server/: index.js  index.js.map  manifest-full.js  remote-entry.js  remote-entry.js.map
frontend/.svelte-kit/types/: route_meta_data.json
frontend/messages/: en.json  es.json  fr.json  it.json  pt.json
frontend/project.inlang/: settings.json
frontend/src/: app.css  app.html  service-worker.ts
frontend/src/lib/: README.md  api.ts  cards.ts  db.ts  deck-fetch.ts  displayContext.ts  engine.ts  geonames.ts  help-docs.ts  markdown.ts  roles.ts  social-card.ts  social-text.ts  sync.ts  tournament-utils.ts  types.ts  utils.ts  vtes-icons.ts
frontend/src/lib/components/: AddPlayerForm.svelte  AttributionPicker.svelte  AvatarCropper.svelte  CardSearch.svelte  CityAutocomplete.svelte  CommunityContentSection.svelte  CommunityLinkPills.svelte  CommunityModerationActions.svelte  CommunitySocialSection.svelte  CommunityTab.svelte  DeckAccordion.svelte  DeckDisplay.svelte  DeckUpload.svelte  DiscordIcon.svelte  DocumentViewer.svelte  LocaleSwitcher.svelte  OrganizerManager.svelte  PlayerRatings.svelte  QrCheckinDisplay.svelte  QrCheckinScanner.svelte  Toast.svelte  (+11 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/static/: manifest.webmanifest
frontend/tests/e2e/: global-setup.ts  global-teardown.ts  setup_e2e.py  tournament.spec.ts  users.spec.ts
reference/: archon-help.md  game_terms.json  judges-guide-v2.md  judges-guide.md  rules-feedback.md  tournament-rules.md
scripts/: fetch-rulebook.sh  update_cards.py
(+235 files in other folders)
