[project]
name = "archon"
version = "0.1.0"
description = "VEKN community and tournament management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "msgspec>=0.19.0",
    "psycopg[binary]>=3.2.3",
    "psycopg-pool>=3.2.3",
    "uuid6>=2024.1.12",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "pyjwt>=2.9.0",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
    "webauthn>=2.0.0",
    "aiosmtplib>=3.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
